# MirrorPace

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  DATA_ENGINE.md  DECISIONS.md  PROJECT_VISION.md
docs/adr/: ADR-001-digital-twin-not-chatbot.md  ADR-002-database-as-source-of-truth.md  ADR-003-coach-adapts-to-available-data.md
docs/knowledge_engine/: IMPLEMENTATION_BLUEPRINT_V1.md  KB_CANONICAL.md  KB_CANONICAL_v1.1.md  KB_CANONICAL_v1.2.md  KB_CANONICAL_v1.3.1.md  KB_CANONICAL_v1.3.md  KB_IMPLEMENTATION_CONTRACT_V1.md  KB_Source_3_Gemini.md  RED_TEAM_REPORT_V1.md  source1_perplexity_cartographie.md  source2_perplexity_decisional.md
docs/qa/: PROFILES.md  QA_PIPE_PROMPT.md  README.md  RUBRIC.md
knowledge/: CLAUDE.md  README.md
knowledge/metadata/: sources.yaml
knowledge/principles/: CLAUDE.md  README.md  principle_template.yaml
knowledge/research_queue/: README.md  questions_to_answer.md
knowledge/rules/: CLAUDE.md  README.md  rule_template.yaml
knowledge/sources/: CLAUDE.md  README.md  source_template.yaml
scripts/: demo_parsers.py  eval_coach.py  import_strava.py  run_agent.py  run_coach.py  run_qa.py  seed_db.py
src/: runner_intelligence.py
src/activity_intelligence/: classifier.py  context.py
src/analytics/: pace_trends.py  personal_bests.py  weekly_stats.py
src/coach_agent/: agent.py
src/coach_intelligence/: __init__.py  api.py
src/database/: connection.py  models.py  repository.py
src/domain/: activity.py
src/ingestion/: CLAUDE.md  csv_enricher.py  fit_parser.py  gpx_parser.py  importer.py  (+1 more)
(+147 files in other folders)
