[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.117.0",
    "fitparse>=1.2.0",
    "google-genai>=2.13.0",
    "gpxpy>=1.6.2",
    "openai>=2.46.0",
    "pandas>=3.0.3",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.51",
]

[tool.pytest.ini_options]
pythonpath = ["."]
